--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "curder <q.curder@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-tabs": "^0.7.0"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
