--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "description": "Css Study",
   "author": "curder <q.curder@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "vitepress": "^1.6.3",
-    "vitepress-plugin-tabs": "^0.7.0"
-  },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
+  },
+  "engines": {
+    "node": ">= 22.0"
+  },
+  "devDependencies": {
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-tabs": "^0.7.0"
   }
 }
